Fixed tags not working, use ! to signify a tag.

--- a/btelnyy-ConfigLoader.Test/btelnyy.ConfigLoader.Test.csproj
+++ b/btelnyy-ConfigLoader.Test/btelnyy.ConfigLoader.Test.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\btelnyy-ConfigLoader.API\btelnyy-ConfigLoader.API.csproj" />
+    <ProjectReference Include="..\btelnyy-ConfigLoader.API\btelnyy.ConfigLoader.API.csproj" />
   </ItemGroup>
 
 </Project>
