Fixed bug where values being changed at eof would  error out
EOF = end of file

--- a/btelnyy-ConfigLoader.API/btelnyy.ConfigLoader.API.csproj
+++ b/btelnyy-ConfigLoader.API/btelnyy.ConfigLoader.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>btelnyy_ConfigLoader</RootNamespace>
+    <RootNamespace>btelnyy.ConfigLoader.API</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
